--- a/css/main1.css
+++ b/css/main1.css
@@ -1,160 +1,3 @@
-header{
-	width:100%;
-	position:fixed;
-	top:0;
-	z-index: 10;
-	background-color: rgba(255,255,0,0.5);
-	height:4em;
-}
-
-.logo{
-	width: auto;
-	float: left;
-	margin-top: 0.25em;
-	margin-left: 3.5em;
-}
-
-nav {
-	display: inline;
-	float:right;
-}
-
-.head-nav {
-	font-family: PT Sans;
-	text-transform: uppercase;
-	font-weight:700;
-	font-size: 1em;
-	letter-spacing: 2px;
-	color:black;
-	margin: 1.5em;
-	display: inline-block;
-	text-decoration: none;
-}
-
-nav a:hover{
-	color: #00ADEF;
-}
-
-body{
-	margin: 0;
-	padding: 0;
-}
-
-.banner{
-/*	no repeat = no tiling for background
-	background: url(css/img/banner-place.png) no-repeat 50% 0 fixed; 
-	width: 100%;
-	height: 600px;
-	overflow: hidden;
-	position: fixed;*/
-	margin-top: 4em;
-}
-
-.banner img{
-	width: 100%;
-}
-
-/*FEATURES SECTION*/
-.features {
-	width: 100%
-	display: block;
-	float:left;
-}
-
-.feature-box{
-	width: 45%;
-	margin: 1.5em 2.5%;
-	float: left;
-  /*float: none;*/
-  	display: block;
-  	position: relative;
-  	overflow: hidden;
-}
-
-.feature-box img {
-	width: 100%;
-}
-
-.label {
-  position: absolute;
-  top: 0;
-  width:100%;
-  text-align: center;
-  color: white;
-  /*background: black;*/
-  background-color: rgba(0, 173, 239, 0.75);
-  /* margin-top: 125px; */
-  vertical-align: middle;
-  padding: 22.2% 0;
-  opacity: 0;
-  margin:0;
-  font-family: PT Sans;
-  text-transform: uppercase;
-  font-size: 1.5rem;
-  font-weight: 700;
-  letter-spacing: 3px;
-  transition:0.3s;
-}
-
-.feature-box:hover .label {
-  opacity:1;
-  transition:0.3s;
-}
-
-/*EVENTS SECTION*/
-.events {
-	width: 100%
-	display: block;
-	float:left;
-	padding: 0 2.5%;
-}
-
-.events-grid{
-	width:25%;
-}
-
-.events-last {
-float:right;
-
-}
-
-/*MOBILE*/
-@media (max-width: 480px){
-
-	header{
-		text-align: center;
-		height:9em;
-	}
-
-	.logo img {
-		clear: both;
-		float:none;
-	}
-
-	.logo {
-		width: 100%
-		text-align: center;
-		float: none;
-
-	}
-
-	.head-nav{
-		width: 50%;
-		margin: 0;
-		float: left;
-		margin: 0.5em auto;
-		background-color: yellow;
-	}
-
-	nav {
-		float:none;
-	}
-
-	.banner{
-		margin-top: 9em;
-	}
-
-}
 
 
 /* ABOUT PAGE*/
@@ -182,6 +25,10 @@ float:right;
 		font-family: PT Sans;
   		font-size: 1.25rem;
   		display: block;
+	}
+
+	.meet-the-team{
+		
 	}
 
 	#meet-team{
@@ -334,81 +181,9 @@ float:right;
   		
 	}
 
-	a:hover {
+/*	a:hover {
   		text-decoration: none;
   		color: white;
   		background-color: #00ADEF;
-  	}
+  	}*/
 
-
-/*FOOTER*/
-.footer{
-  width: 100%;
-  height: 100px;
-  font-size: 14px;
-/*  background-color: yellow;*/
-  border-top: 1px solid #ccc;
-  z-index: 1;
-  position: relative;
-  color: white;
-  display: inline-block;
-  text-align: center;
-  margin-top: 3em
-}
-
-.footer-icons{
-	text-align: center;
-	float: none;
-	display: block;
-	margin: 1em 1.5em;
-}
-
-.footer-img{
-	text-align: center;
-	float: none;
-	margin: 0.5em 0;
-}
-
-.comments{
-  font-family: PT Sans;
-  text-transform: uppercase;
-  letter-spacing: 2px;
-  width: 12rem;
-  height: 1rem;
-  margin-top: 0.25em;
-/*  line-height: 1em;*/
-  padding: 0.3rem;
-
-}
-
-input:focus {
-  outline:none;
-}
-
-.email-button{
-  text-decoration: none;
-  list-style: none;
-  border: none;
-  width: 10%;
-  padding: 0.75em 1em;
-  text-align: center;
-  font-family: PT Sans;
-  text-transform: uppercase;
-  font-weight: 700;
-  letter-spacing: 2px;
-  font-size: 0.8em;
-  background-color:  #E6E7E8;
-  color: white;
-  transition:0.5s;
-  color:black;
-  display: inline;
-}
-
-.email-button:hover{
-	background-color: #00ADEF;
-	border:none;
-	color:white;
-	transition:0.5s;
-}
-
-	/*END OF FOOTER*/
