--- a/css/main.css
+++ b/css/main.css
@@ -4,8 +4,9 @@ header{
 	position:fixed;
 	top:0;
 	z-index: 10;
-	background-color: rgba(255,255,0,0.5);
+	background-color: white;
 	height:4em;
+	box-shadow: 0 3px 5px 0 rgba(0,0,0,0.1);
 }
 
 .logo{
