--- a/css/product.css
+++ b/css/product.css
@@ -45,6 +45,7 @@
 	transition:0.3s;
 	color:black;
 	display:inline-block;
+	box-shadow: 0 1px 2px 0 rgba(0,0,0,0.3);
 	}
 
 .nav-button:hover{
@@ -119,19 +120,54 @@
 
 .category-banner {
 	width:100%;
+	margin-bottom: 1em;
+}
+
+.refine{
+	width:100%;
+	float:left;
+	display:inline-block;
+}
+
+#search-bar{
+	display: inline-block;
+	float:left;
+	width:85%;
+}
+
+.search{
+	padding:1em;
+	padding-right: 2em;
+	width: 100%;
+	float:left;
+}
+
+.search-button{
+	display: inline-block;
+	float: left;
+	padding-top:0.5em;
+}
+
+.search-line{
+	display: inline-block;
+	width:30%;
+	float:right;
 }
 
 /*---drop down sort by bar---*/
 .drop-down{
 	position: relative;	
-	border: 1 solid #ccc;
 	border-radius: 0;
-	width: 50%;
+	width: 45%;
   	height: 2.5rem;
   	line-height: 2.5rem;
   	overflow: hidden;
   	border: 1px solid #ccc;
   	padding: 0 1rem;
+  	margin: 0;
+  	margin-right:1em;
+  	display: inline-block;
+  	float:left;
 }
 
 select{
