--- a/css/popup.css
+++ b/css/popup.css
@@ -4,17 +4,18 @@
   opacity: 1;
   position: fixed;
   /*height: 50%;*/
-  width: 60%;
-  height:8em;
+  width: 30%;
+  height:11em;
   /* float: left; */
-  background: rgb(0,173,279);
+/*  background: rgb(0,173,279);*/
+  background-color: white;
   vertical-align: middle;
   text-align: center;
   z-index: 9999;
   top: 110px;
   margin: 4em 25%;
   margin: 0;
-  right: 20%%;
+  right: 35%;
   top: 4em;
   /*border: 1px solid lightgrey;*/
   box-shadow: 0 2px 4px 0 rgba(0,0,0,0.1);
@@ -22,21 +23,36 @@
 
 #popup_box h1 {
 	font-family:PT Sans;
-	font-size: 24pt;
-	color:white;
+	font-size: 1.5em;
+	color:#00ADEF;
+  display:inline-block;
+  float: left;
+  margin-left: 1em;
+  margin:0;
 }
 
+.checkmark{
+  margin-top: 0.5em;
+  margin-right: 1em;
+}
 
 #popupBoxClose {
-    font-size:20px;  
-    line-height:15px;  
-/*    right:5px;  
-    top:5px;  */
-    position: relative;
-    bottom:0.75;  
-    /*color:#6fa5e2;  */
-    color:white;
-    font-weight:500;    
+  font-size:20px;  
+  line-height:15px;  
+  /*    right:5px;  
+  top:5px;  */
+  position: relative;
+  bottom:0.75;  
+  /*color:#6fa5e2;  */
+  color:#00ADEF;
+  font-weight:500;
+  text-transform: uppercase;
+  font-size: 1em;
+  letter-spacing: 2px;
+  margin-right: 5em;
+  text-decoration: none;
+  font-weight: 500;  
+  float:right;  
 }
 
 #popupBoxClose:hover{
@@ -44,27 +60,52 @@
 }
 
 #popup_box a {
-	font-family:PT Sans;
-    font-size: 1em;
+  font-family: PT Sans;
+  font-size: 0.75em;
+  font-weight: 700;
+  margin-right: 1em;
+  margin-top: 1em;
+}
+
+.popup-item{
+  width:100%;
+  display: inline-block;
+  float:left;
+}
+
+.popup-item img{
+  display: inline-block;
+  float:left;
+  margin-left:0.5em;
 }
 
 .popup-nav{
   width:100%;
   text-align:center;
   display:inline-block;
-
 }
 
-.popup-nav a{
-  text-transform: uppercase;
-  font-size: 1em;
+.pop-up-header{
+  width:50%;
+  display: inline-block;
+  float:left;
+  margin-top: 2em;
+  margin-left: 1em;
+}
+
+.popup-checkout{
+  padding: 0.75em 1.5em;
+  font-size: 0.75em;
+  color:black;
+  background-color: #ccc;
   letter-spacing: 2px;
-  margin-right: 5em;
+  text-transform: uppercase;
   text-decoration: none;
-  color: white;
-  font-weight: 500;
+  float:none;
+  margin-bottom: 0.5em;
 }
 
-.popup-nav a:hover{
-  border-bottom: 1px solid white;
-}
+.popup-checkout:hover{
+    background-color: #00AEDF;
+    color:white;
+  ;
