--- a/css/main.css
+++ b/css/main.css
@@ -158,16 +158,16 @@ float:right;
 /*FOOTER*/
 .footer{
   width: 100%;
-  height: 100px;
+  height: auto;
   font-size: 14px;
 /*  background-color: yellow;*/
-  border-top: 1px solid #ccc;
+ 
   z-index: 1;
   position: relative;
-  color: white;
+  box-shadow: 0 -2px 9px 0 rgba(0,0,0,0.1);
   display: inline-block;
   text-align: center;
-  margin-top: 3em
+  margin-top: 3em;
 }
 
 .footer-icons{
