--- a/css/product.css
+++ b/css/product.css
@@ -171,15 +171,17 @@
 
 .search{
 	padding:1em;
-	padding-right: 2em;
+	padding-right: 5%;
 	width: 100%;
 	float:left;
 }
 
 .search-button{
-	display: inline-block;
-	float: left;
-	padding-top:0.5em;
+  display: inline-block;
+  float: left;
+  padding-top: 0.5em;
+  right: 4%;
+  position: absolute;
 }
 
 .search-line{
@@ -247,6 +249,25 @@ select:focus {
 	transition:0.3s;
 }
 
+.offer-label{
+	font-family: PT Sans;
+	text-transform: uppercase;
+	font-size: 0.75em;
+	background-color: rgba(0,174,223,0.5);
+	color:white;
+	letter-spacing: 0.3em;
+	width:100%;
+	display: inline-block;
+	margin: 0;
+	padding: 0.25em 0;
+	position: absolute;
+	top:2.75em;
+}
+
+.sale{
+	background-color: rgba(255,0,0,0.5)
+}
+
 .item-name{
 	font-family: PT Sans;
 	font-size: 1rem; 
@@ -271,9 +292,9 @@ select:focus {
 	margin-right: 3.5%;
 	text-align:center;
 	width:21.8%;
-	  vertical-align: top;
+	vertical-align: top;
+	position: relative;
 }
-
 
 .item-box img {
 	width:100%;
@@ -794,8 +815,8 @@ input {
 
 	.item-box {
 		width: 45%;
-  float: left;
-  margin-right: 4%;
+		float: left;
+		margin-right: 4%;
 	}
 
 	.item-box-tab-last{
@@ -919,12 +940,49 @@ input {
 	.product-list{
 		width:100%;
 	}
+
 	/*END OF PRODUCT NAVIGATION SECTION*/
 
 
 	/*PRODUCT LIST SECTION*/
+	.refine{
+		width:97%;
+	}	
+
+
 	.drop-down{
-		width:auto;	
+		width: 100%;
+		display: block;
+		padding:0;
+		margin:0;	
+	}
+
+	select{
+		width:97%;
+	}
+
+	#search-bar{
+		display: inline-block;
+		float: left;
+		width: 94%;
+		margin: 0;
+	}
+
+	.search{
+		margin: 0;
+		margin-top: 0.5em;
+		  padding-right: 3.6%;
+	}
+
+	.search-line{
+		width:100%;
+	}
+
+	.search-button{
+		padding-top: 0.9em;
+	  position: absolute;
+	  right: 4%;
+
 	}
 	/*END OF PRODUCT LIST SECTION*/
 
