--- a/css/product.css
+++ b/css/product.css
@@ -485,6 +485,7 @@ font-family: Crimson Text;
 	display: block;
 	float: left;
 	width:100%;
+	height:25em;
 }
 
 .recommendation-box{
@@ -500,6 +501,11 @@ font-family: Crimson Text;
 	text-align:center;
 	width: 11%;
 	min-width:125px;
+	vertical-align: top;
+}
+
+.recommend-item-box img{
+	width:100%;
 }
 /*END OF RECOMMENDATION SECTION*/
 
@@ -512,12 +518,13 @@ font-family: Crimson Text;
   width: 50%;
   margin-left: 5%;
   display: inline;
+    position: relative;
+  top: 4em;
 
 }
 
 .information-header{
 	margin-top: 1em;
-	margin-left: 1.5em;
 }
 
 .checkout-information{
@@ -678,13 +685,13 @@ select:focus {
 
 }
 
-.detail-country{
+.detail-dropdown{
 	font-family: PT Sans;
 	text-transform: uppercase;
 	font-size: 0.75em;
 	letter-spacing: 3px;
 	text-align: center;
-	background-color: white;
+	background-color: #FAFAFA;
 	border:0;
 	border-radius: 0;
 /*	margin-left: 6em;*/
@@ -708,25 +715,6 @@ select:focus {
 	width:100%;
 	float: left;
 	margin:0;
-}
-
-.detail-card{
-	font-family: PT Sans;
-	text-transform: uppercase;
-	font-size: 0.75em;
-	letter-spacing: 3px;
-	text-align: center;
-	background-color: white;
-	border: 0;
-	border-radius: 0;
-	/* margin-left: 6em; */
-	transition: 0.5s;
-	width: 100%;
-	height: 0.5em;
-	float: left;
-	display: inline;
-	margin: 0.25;
-	margin-left: 0;
 }
 
 .drop-down-details{
@@ -767,7 +755,7 @@ input {
 /*REVIEW SECTION*/
 .cart{
 	float: right;
-	width: 30%;
+	width: 31%;
 	position: absolute;
 	top:4em;
 	right:1em;
@@ -776,12 +764,14 @@ input {
 	display: block;
 /*	background-color: yellow;*/
 	padding:1em;
-	border: 1px solid black;
+/*	border: 1px solid black;*/
 	height:auto;
+	box-shadow: 0 3px 5px 0 rgba(0,0,0,0.1);
+	background-color: white;
 }
 
 .item-wrapper{
-	padding-bottom: 3em;
+/*	padding-bottom: 3em;*/
 	border-bottom: 1px solid black;
 	display: block;
 	float: left;
@@ -836,7 +826,11 @@ input {
 	display: block;
 	margin-bottom: 0.25rem;
 	width: 50%;
-	margin: 2rem 25% 0.25rem 25%;
+	margin: 0rem 25% 0rem 25%;
+}
+
+.review-item img{
+	width:100%
 }
 /*END OF REVIEW SECTION*/
 
@@ -1113,6 +1107,10 @@ input {
 	.over-banner-label{
 		bottom: 2.9em;
 	}
+
+	.recommendations{
+	height:35em;
+}
 
 	/*footer*/
 	.footer {
