- added images to the about page. Added the banner image, staff images and team picture.
- formatted the banner image to have a white box with the page title on top.

- altered the staff grid to be 3x2 instead of 2x3

- styled the staff decription to have a smaller with, bold name and blue position title

--- a/css/grid.css
+++ b/css/grid.css
@@ -11,6 +11,12 @@
 }
 
 /*MULTI*/
+.grid-col-three {
+	width: 33%;
+	margin-top: 2rem;
+	margin-bottom: 0;;
+}
+
 .grid-col-half {
 	width: 50%;
 	margin-top: 2rem;
