--- a/css/main1.css
+++ b/css/main1.css
@@ -1,56 +1,12 @@
-/*BANNER FORMAT*/
-
-.banner-title{
-	font-family: PT Sans;
-	font-size: 2.5rem;
-	font-weight: 700;
-	text-transform: uppercase;
-	letter-spacing: 0.3em;
-	margin:0;
-}
-
-.banner-question{
-	font-family: PT Sans;
-	font-size: 1rem;
-	font-weight: 500;
-	text-transform: uppercase;
-	letter-spacing: 0.7em;
-	margin:0;
-	border-top: 1px solid black;
-	padding-top: 0.5em;
-	width: 100%;
-}
-
-.banner-header{
-	background-color: rgba(255,255,255,0.7);
-	width: 40%;
-	padding: 1rem;
-	text-align: center;
-	position: absolute;
-	top: 35%;
-	margin: 0px 30%;
-}
-
-.banner img{
-	position: relative;
-}
-
-.banner{
-	position: relative;
-	}
 
 
 /* ABOUT PAGE*/
-	.company-text {
-		font-family: PT Sans;
-		font-size: 0.8rem;
+	
+	.crimson-text {
+		font-family: Crimson;
 		margin:0;
-		padding: 0.25rem 2rem;
-		margin-left: 2em;
+		padding: 2rem;
 		text-align: left;
-		width: 95%;
-		letter-spacing:0.05em;
-		line-height: 1.5em;
 	}
 
 	.information-header {
@@ -71,45 +27,30 @@
   		display: block;
 	}
 
-	.about{
-		text-align: center;
-		margin: 2rem;
-		padding-bottom: 4rem;
-		border-bottom: 1px solid #ccc;
+	.meet-the-team{
+		
 	}
-
 
 	#meet-team{
 		height: 2em;
-  		background-color: #00ADEF;
+  		background-color: lightgray;
   		text-align: center;
   		padding: 0.5rem;
   		margin-top: 3rem;
-  		color: white;
 	}
 
 	.picture-place{
 		max-width: 90%;
 	}
 
-	.staff-name{
-		font-size: 1rem;
-		font-weight: 700;
+	#staff-name{
   		padding-top: 0.5rem;
   		margin: 0;
-  		letter-spacing: 2px;
-  		text-transform: uppercase;
-  		font-family: PT Sans;
-  		font-size:0.75rem;
-	}
-
-	.staff-description{
-		color: #00AEDF;
+  		letter-spacing: 2px
 	}
 
 	#staff-intro{
-		width: 90%;		
-		text-align: center;
+		padding: 0.5rem 2rem;
 
 	}
 
